# serializer version: 1
# name: test_config_load_config_info[storage_data0]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'agents': dict({
        }),
        'automatic_backups_configured': False,
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'next_automatic_backup': None,
        'next_automatic_backup_additional': False,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'days': list([
          ]),
          'recurrence': 'never',
          'time': None,
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_load_config_info[storage_data1]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'agents': dict({
        }),
        'automatic_backups_configured': True,
        'create_backup': dict({
          'agent_ids': list([
            'test-agent1',
            'hassio.local',
            'test-agent2',
          ]),
          'include_addons': list([
            'addon1',
            'addon2',
          ]),
          'include_all_addons': True,
          'include_database': True,
          'include_folders': list([
            'media',
            'share',
          ]),
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'next_automatic_backup': None,
        'next_automatic_backup_additional': False,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'days': list([
          ]),
          'recurrence': 'never',
          'time': None,
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_config_load_config_info[storage_data2]
  dict({
    'id': 1,
    'result': dict({
      'config': dict({
        'agents': dict({
        }),
        'automatic_backups_configured': True,
        'create_backup': dict({
          'agent_ids': list([
            'test-agent1',
            'hassio.local',
            'test-agent2',
          ]),
          'include_addons': list([
            'addon1',
            'addon2',
          ]),
          'include_all_addons': False,
          'include_database': True,
          'include_folders': list([
            'media',
            'share',
          ]),
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'next_automatic_backup': None,
        'next_automatic_backup_additional': False,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'days': list([
          ]),
          'recurrence': 'never',
          'time': None,
        }),
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
